# Chess

./: .gitignore
rust-pgn-reader/: Cargo.toml
rust-pgn-reader/src/: main.rs  test.npz
tf/: engine_eval.py  fen.txt  model.h5  model2.h5  play.py  pyvenv.cfg  test.npz  tf.py
